# dds3

./: .bazelrc  .clang-tidy  .gitignore  BUILD.bazel  CPPVARIABLES.bzl  CRITICAL_MERGESORT_FIX.md  ChangeLog  Doxyfile  GEMINI.md  MODULE.bazel  README.md  copilot-instructions.md  heuristic_analysis.md  setup.md  test_integration.cpp
.continue/mcpServers/: cpp-mcp.yaml  git-mcp.yaml  github-mcp.yaml  serena-mcp.yaml
.continue/prompts/: open-pr.md
.continue/rules/: 01-quick-planning.prompt.md  bazel.md  cpp.md  git.md  github.md  open-pr.md
.cursor/plans/: extract-heuristic-sorting.md
.cursor/rules/: 01-quick-planning.prompt.md  02-quick-task-breakdown.prompt.md  03-task-execution.prompt.md  bazel.md  cpp.md  git.md  github.md
.cursor/tasks/extract-heuristic-sorting/: 01-discovery-boundaries.md  02-api-design.md  03-bazel-scaffolding.md  04-implement-lead-hand-scoring.md  05-implement-lho-scoring.md  06-implement-partner-scoring.md  07-implement-rho-scoring.md  08-adapter-integration-moves.md  09-golden-parity-tests.md  10-docs-and-cleanup.md
.gemini/: settings.json
.gemini/commands/bazel/: compile_commands.toml
.gemini/commands/git/: commit.toml
.gemini/plans/: heuristic_sorting_tests.md
.gemini/tasks/: 03_bazel_wiring.md  04_implement_parity.md
.gemini/tasks/extract_heuristic_sorting/: 01_discovery_and_boundaries.md  02_library_api_design.md  05_adapter_integration.md  06_testing.md  07_documentation.md
.gemini/tasks/heuristic_sorting_tests/: 01_analysis_and_scaffolding.md  02_api_design_and_implementation.md  02_refactoring_for_testability.md  03_integration_and_build.md  03_test_implementation.md  04_test_implementation.md  04_verification.md  05_verification.md
.github/instructions/: README.md  bazel.instructions.md  cpp.instructions.md  git.instructions.md  github.instructions.md
.github/pull_request_templates/: refactor_dynamic_environment.md
.github/workflows/: ci_linux.yml  ci_macos.yml
.planning/: 1_PRD.md  2_KEY_DECISIONS.md  3_IMPLEMENTATION.md  4_RISKS.md  5_TESTING.md  6_SUMMARY.md
.planning/tasks/: 001-create-library-dir.md  002-move-source-files.md  003-copy-src-h.md  004-copy-include-h.md  005-copy-tests.md  006-create-build-file.md  007-remove-file-groups.md  008-add-exports.md  009-update-doxygen-srcs.md  010-run-bazel-build.md  012-commit-changes.md  013-open-pr.md
.serena/: project.yml
.windsurf/workflows/: pull_request.yaml
copilot/: heuristic_sorting_comparison_instructions.md  unit_test_trans_table_insructions.md
copilot/instructions/: dynamic_environment.md  heuristic_sorting_design.md  heuristic_sorting_improve_performance.md  lookup_tables_in_separate_library.md  make_lookup_tables_readonly.md  per_context_transposition_tables.md  rename_header_files.md  static_memory_genmove.md  trans_table_as_solver_context_member.md  trans_table_design.md
copilot/perf/: BUILD.bazel  README.md  compare_moves.py  compare_moves_stream.py  filter_jsonl_by_board.py  fixtures.h  generate_board_html.py  generate_board_reports.py  normalize_moves_log.py  run_dtest_compare.sh  run_sample.sh  sample_jsonl.py  weight_alloc_microbench.cpp
copilot/perf/artifacts/: baseline-summary.md  per-board-legacy.txt  per-board-new.txt  per-board-summary.md  raw-times-legacy.txt  raw-times-new.txt  smoke-test.txt
copilot/perf/artifacts/top_boards/: board_9_report.txt  per_board_ranking.txt
copilot/perf/artifacts/top_boards_html/: index.html
copilot/plans/: compare_heuristic_sorting.md  dynamic_environment_plan.md  extract_heuristic_sorting.md  extract_utility.md  heuristic_analysis.md  heuristic_sorting_investigation_plan.md  remove_legacy_heuristic_sorting.md  remove_threaddata_tt.md  trans_table_as_solver_context_member_plan.md  unit_test_trans_table.md  utility_unit_tests_summary.md
copilot/reports/: dynamic_environment_inventory.md  heuristic_equivalence_report.md  unit_test_trans_table_summary.md
copilot/reports/remove_legacy_heuristic_sorting/: 01_inventory.md  02_api_map.md  03_decision.md  04_exports_visibility.md  05_refactor_moves.md
copilot/scripts/: README.md  check_mutable_statics.py
copilot/tasks/compare_heuristic_sorting/: 01_create_test_directory.md  02_create_test_build_file.md  03_create_test_utilities.md  04_add_canonical_positions.md  05_implement_compare_harness.md  06_wire_unit_tests.md  07_randomized_fuzz_batch.md  08_stability_tie_breaking.md  09_performance_metrics.md  10_diff_reporting_and_logs.md  11_write_equivalence_report_template.md  12_add_ci_smoke_job.md  13_triage_mismatches.md  14_finalize_documentation.md  README.md
copilot/tasks/dynamic_environment/: 01_inventory_mutable_state.md  02_add_guardrails.md  03_scaffold_solver_context.md  04_migrate_transposition_table.md  05_migrate_search_state.md  06_migrate_move_generation.md  07_migrate_heuristic_sorting_buffers.md  08_migrate_utilities_rng_logging.md  09_performance_alignment.md  10_concurrency_validation.md  11_docs_and_examples.md  task_summary.md
copilot/tasks/extract_heuristic_sorting/: 01_analysis_result.md  01_analyze_moves_cpp_heuristic_code.md  02_review_library_scaffolding.md  02_scaffolding_review.md  03_compile_flag_strategy.md  03_document_compile_flag_strategy.md  04_completion_WeightAllocTrump0.md  04_extract_WeightAllocTrump0.md  05_extract_WeightAllocNT0.md  (+31 more)
doc/: heuristic-sorting.md
docs/: BUILD_SYSTEM.md
examples/: AnalyseAllPlaysBin.cpp  AnalyseAllPlaysPBN.cpp  AnalysePlayBin.cpp  AnalysePlayPBN.cpp  CalcAllTables.cpp  CalcAllTablesPBN.cpp  CalcDDtable.cpp  CalcDDtablePBN.cpp  DealerPar.cpp  Par.cpp  SolveAllBoards.cpp  SolveBoard.cpp  SolveBoardPBN.cpp  hands.cpp
hands/: README
src/: DealerPar.cpp  File.h  Init.cpp  Memory.h  Moves.h  PBN.h  Par.cpp  Scheduler.h  SolveBoard.cpp  System.h  ThreadMgr.h  TimeStat.h  TimerGroup.h  TimerList.h  TransTableL.cpp  TransTableS.cpp  dds.cpp
tests/: BUILD.bazel  README.md
tests/heuristic-sorting/: BUILD.bazel  heuristic_sorting_test.cpp
toolchain/: BUILD.bazel  brew_clang_cc_toolchain_config.bzl
windsurf-instructions/: plan-modernise-tests.md  plan.md  prompts.md
(+71 files in other folders)
