config_setting(
    name = "build_macos",
    constraint_values = [
        "@platforms//os:osx",
    ],
)

config_setting(
    name = "debug_build_macos",
        constraint_values = [
        "@platforms//os:osx",
    ],
    values = {"compilation_mode": "dbg"},
)

config_setting(
    name = "build_linux",
    constraint_values = [
        "@platforms//os:linux",
    ],
)

config_setting(
    name = "debug_build_linux",
        constraint_values = [
        "@platforms//os:linux",
    ],
    values = {"compilation_mode": "dbg"},
)

load("//:CPPVARIABLES.bzl", "DDS_CPPOPTS", "DDS_LINKOPTS", "DDS_LOCAL_DEFINES")
load("@rules_cc//cc:defs.bzl", "cc_library")

filegroup(
    name = "dds_sources",
    srcs = glob([
        "src/*.cpp",
        "src/*.h",
        "include/portab.h",
        "include/dll.h",
    ]),
)

filegroup(
    name = "dds_headers",
    srcs = ["dds.h"],
)

genrule(
    name = "doxygen_docs",
    srcs = glob([
        "src/*.cpp",
        "src/*.h",
        "include/*.h",
    ]) + ["Doxyfile"],
    outs = ["doxygen_docs.zip"],
    cmd = """
      rm -rf doxygen_output
      doxygen $(location Doxyfile)
      if [ -d doxygen_output/html ]; then
        zip -r $@ doxygen_output/html
      else
        echo 'No docs generated' > dummy.txt && zip $@ dummy.txt
      fi
    """,

    output_to_bindir = True,
)

cc_library(
    name = "dds",
    srcs = ["//:dds_sources"],
    hdrs = ["//:dds_headers"],
    copts = DDS_CPPOPTS,
    linkopts = DDS_LINKOPTS,
    local_defines = DDS_LOCAL_DEFINES,
    visibility = ["//visibility:public"],
    include_prefix="dds",
    deps = [],
)

cc_library(
    name = "testable_dds",
    srcs = glob([
        "src/*.cpp",
        "src/*.h",
        "include/*.h",
    ]),
    hdrs = glob([
        "src/*.h",
    ]),
    copts = DDS_CPPOPTS,
    linkopts = DDS_LINKOPTS,
    local_defines = DDS_LOCAL_DEFINES,
    visibility = [
        "//tests:__pkg__",
        "//tests/regression/heuristic_sorting:__pkg__"],
    includes = ["include", "src"],
    strip_include_prefix = "src",
    include_prefix="dds",
    deps = [],
)
