config_setting(
    name = "build_macos",
    constraint_values = [
        "@platforms//os:osx",
    ],
)

config_setting(
    name = "debug_build_macos",
        constraint_values = [
        "@platforms//os:osx",
    ],
    values = {"compilation_mode": "dbg"},
)

config_setting(
    name = "build_linux",
    constraint_values = [
        "@platforms//os:linux",
    ],
)

config_setting(
    name = "debug_build_linux",
        constraint_values = [
        "@platforms//os:linux",
    ],
    values = {"compilation_mode": "dbg"},
)

load("//:CPPVARIABLES.bzl", "DDS_CPPOPTS", "DDS_LINKOPTS", "DDS_LOCAL_DEFINES")
load("@rules_cc//cc:defs.bzl", "cc_library")





genrule(
    name = "doxygen_docs",
    srcs = ["Doxyfile"],
    outs = ["doxygen_docs.zip"],
    cmd = """
      echo 'Doxygen docs temporarily disabled during migration' > dummy.txt && zip $@ dummy.txt
    """,
    output_to_bindir = True,
)

cc_library(
    name = "dds",
    deps = ["//library/src:dds"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "testable_dds",
    deps = ["//library/src:testable_dds"],
    visibility = [
        "//library/tests:__pkg__",
        "//library/tests/regression/heuristic_sorting:__pkg__"],
)
