config_setting(
    name = "build_macos",
    constraint_values = [
        "@platforms//os:osx",
    ],
)

config_setting(
    name = "debug_build_macos",
        constraint_values = [
        "@platforms//os:osx",
    ],
    values = {"compilation_mode": "dbg"},
)

config_setting(
    name = "build_linux",
    constraint_values = [
        "@platforms//os:linux",
    ],
)

config_setting(
    name = "debug_build_linux",
        constraint_values = [
        "@platforms//os:linux",
    ],
    values = {"compilation_mode": "dbg"},
)

config_setting(
    name = "new_heuristic",
    define_values = {"new_heuristic": "true"},
)

config_setting(
    name = "skip_heuristic",
    define_values = {"skip_heuristic": "true"},
)

config_setting(
    name = "debug_all",
    define_values = {"debug_all": "true"},
)

# Enable DDS_SCHEDULER via --define=scheduler=true
config_setting(
    name = "scheduler",
    define_values = {"scheduler": "true"},
)

# Enable DDS_TT_CONTEXT_OWNERSHIP via --define=tt_context_ownership=true
config_setting(
    name = "tt_context_ownership",
    define_values = {"tt_context_ownership": "true"},
)

# Enable DDS_DEBUG_TT_RESET via --define=tt_reset_debug=true
config_setting(
    name = "tt_reset_debug",
    define_values = {"tt_reset_debug": "true"},
)


load("@rules_cc//cc:defs.bzl", "cc_library")

genrule(
    name = "doxygen_docs",
    srcs = ["Doxyfile"],
    outs = ["doxygen_docs.zip"],
    cmd = """
      echo 'Doxygen docs temporarily disabled during migration' > dummy.txt && zip $@ dummy.txt
    """,
    output_to_bindir = True,
)

cc_library(
    name = "dds",
    deps = ["//library/src:dds"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "testable_dds",
    deps = ["//library/src:testable_dds"],
    visibility = [
        "//library/tests:__pkg__",
        "//library/tests/regression/heuristic_sorting:__pkg__",
        "//library/tests/heuristic_sorting:__pkg__",
        "//library/tests/system:__pkg__",
    ],
)
