module(
    name = "dds",
    version = "0.1.0"
)

bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "googletest", version = "1.16.0")
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)

git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "33658bab23a4858b513d767480b43d3d8fb6a3d1",
)

register_toolchains("//toolchain:brew_clang_toolchain")