load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "weight_alloc_microbench",
    srcs = ["weight_alloc_microbench.cpp", "fixtures.h"],
    deps = [
    "//library/src/moves:moves",
    "//library/src/data_types:dds_types",
    ],
    # This is a developer microbenchmark; mark manual so it isn't built during
    # the default `bazel test //...` run which is meant for tests only.
    tags = ["manual"],
)
